implement users endpoint + skills by contact
