# contacts-api/src/main/java/owt/demo/contacts/api/services/ContactsService.java
@@ -1,13 +1,13 @@
 package owt.demo.contacts.api.services;
 
-import org.springframework.stereotype.Service;
 import owt.demo.contacts.api.exceptions.NotFoundException;
 import owt.demo.contacts.model.Contact;
+import owt.demo.contacts.model.SkillLevel;
+import owt.demo.contacts.model.SkilledContact;
 
 import java.net.URI;
 import java.util.List;
 
-@Service
 public interface ContactsService {
 
     List<Contact> getContacts();
@@ -15,4 +15,8 @@ public interface ContactsService {
     Contact getContactById(Long id) throws NotFoundException;
 
     URI saveContact(Contact contact);
+
+    List<SkillLevel> getSkillsById(Long contactId) throws NotFoundException;
+
+    SkilledContact addSkillToContact(Long contactId, SkillLevel skill) throws NotFoundException;
 }
