# contacts-api/src/main/java/owt/demo/contacts/model/UserEntity.java
@@ -15,8 +15,9 @@ import javax.persistence.*;
 @AllArgsConstructor
 public class UserEntity {
     @Id
-    @GeneratedValue(strategy = GenerationType.AUTO)
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
     private String username;
+    private String password;
 }
