# contacts-api/src/main/resources/api-spec.yaml
@@ -88,6 +88,52 @@ paths:
         404:
           description: Contact not found
 
+  /contacts/{contactId}/skills:
+    parameters:
+      - name: contactId
+        in: path
+        description: ID of the contact
+        required: true
+        type: integer
+        format: int64
+
+    get:
+      tags:
+        - "contact"
+      summary: Get all skills of a contact
+      description: Get all skills of a certain contact as well as their levels for those skills
+      operationId: getSkillsByContactId
+      produces:
+        - application/json
+      responses:
+        200:
+          description: Success
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/SkillLevel"
+    post:
+      tags:
+        - "contact"
+      summary: Add a skill to a contact
+      description: Add a skill to the set of skills of a contact and set the level
+      operationId: addSkillToContact
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: skill
+          description: skill to add to contact
+          schema:
+            $ref: "#/definitions/SkillLevel"
+      responses:
+        201:
+          description: Added a skill to a contact
+          schema:
+            description: The new skilled contact
+            $ref: "#/definitions/SkilledContact"
+
+
   /skills:
     get:
       tags:
@@ -153,45 +199,99 @@ paths:
         404:
           description: Skill not found
 
+  /users:
+    get:
+      tags:
+        - user
+      description: get all users of the API
+      summary: get all users
+      operationId: getUsers
+      produces:
+        - application/json
+      responses:
+        200:
+          description: Success
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/User"
+
+  /users/{userId}:
+    get:
+      tags:
+        - user
+      description: get a user using his id in the database
+      summary: get user by id
+      operationId: getUserById
+      produces:
+        - application/json
+      parameters:
+        - name: userId
+          in: path
+          description: the id of the user to retrieve
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: User retrieved
+          schema:
+            $ref: "#/definitions/User"
+        400:
+          description: Invalid user Id
+        404:
+          description: user not found
+
+
+
 definitions:
   Contact:
-    type: "object"
+    type: object
     properties:
       firstName:
-        type: "string"
+        type: string
       lastName:
-        type: "string"
+        type: string
       fullName:
-        type: "string"
+        type: string
       address:
-        type: "string"
+        type: string
       email:
-        type: "string"
+        type: string
       phoneNumber:
-        type: "string"
+        type: string
   Skill:
-    type: "object"
+    type: object
     properties:
       skill:
-        type: "string"
+        type: string
+  SkillLevel:
+    type: object
+    properties:
+      skill:
+        type: string
+      level:
+        type: string
   SkilledContact:
-    type: "object"
+    type: object
     properties:
       contactId:
-        type: "integer"
-        format: "int64"
+        type: integer
+        format: int64
       skill:
-        type: "string"
+        type: string
       level:
-        type: "string"
+        type: string
   User:
-    type: "object"
+    type: object
     properties:
       id:
-        type: "integer"
-        format: "int64"
+        type: integer
+        format: int64
       username:
-        type: "string"
+        type: string
+      password:
+        type: string
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
